# graphinf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
_graphinf/: CMakeLists.txt  __init__.py
_graphinf/bindings/: pybind_main.cpp
_graphinf/bindings/data/: init_dynamics.h
_graphinf/bindings/random_graph/: init_randomgraph.h
_graphinf/bindings/random_graph/prior/: init_blockcount.h
_graphinf/include/GraphInf/: generators.h  types.h
_graphinf/include/GraphInf/data/: data_model.hpp  types.h
_graphinf/include/GraphInf/mcmc/: community.hpp  mcmc.h  reconstruction.hpp
_graphinf/include/GraphInf/proposer/: movetypes.h
_graphinf/include/GraphInf/random_graph/: configuration.h  dcsbm.h  erdosrenyi.h  hdcsbm.h  hsbm.h  random_graph.hpp  sbm.h  uniform.h  util.h
_graphinf/include/GraphInf/utility/: functions.h  integer_partition.h
_graphinf/nb_wrapper/: main.cpp
_graphinf/nb_wrapper/utility/: init_distance.h  init_functions.h  init_maps.h  init_utility.h
_graphinf/py_wrapper/: init_exceptions.h
_graphinf/py_wrapper/data/: init.h
_graphinf/py_wrapper/random_graph/: init.h  init_erdosrenyi.h  init_hdcsbm.h  init_sbm.h
_graphinf/py_wrapper/random_graph/prior/: init_degree.h
_graphinf/pybind_wrapper/: init_generator.h  pybind_main.cpp
_graphinf/pybind_wrapper/data/: init.h  init_dynamics.h
_graphinf/pybind_wrapper/mcmc/: init_actions.h  init_collectors.h  init_mcmc.h  init_verbose.h
_graphinf/pybind_wrapper/proposer/: init.h  init_edge.h  init_label.h  init_movetypes.h  init_proposer.h  init_sampler.h
_graphinf/pybind_wrapper/random_graph/: init.h  init_configuration.h  init_dcsbm.h  init_erdosrenyi.h  init_hdcsbm.h  init_hsbm.h  init_randomgraph.h  init_sbm.h
_graphinf/pybind_wrapper/random_graph/likelihood/: init.h  init_likelihood.h
_graphinf/pybind_wrapper/random_graph/prior/: init_block.h  init_degree.h  init_labeled_degree.h  init_labelgraph.h  init_nestedblocks.h  init_nestedlabelgraph.h  init_prior.h
_graphinf/pybind_wrapper/random_graph/proposer/: init_label.h
_graphinf/pybind_wrapper/utility/: init_functions.h  init_integerpartition.h  init_maps.h
_graphinf/src/: generators.cpp
_graphinf/src/data/: data_model.cpp
_graphinf/src/data/dynamics/: binary_dynamics.cpp  dynamics.cpp  glauber.cpp
_graphinf/src/mcmc/: community.cpp  mcmc.cpp  reconstruction.cpp
_graphinf/src/proposer/edge/: double_edge_swap.cpp  edge_proposer.cpp  hinge_flip.cpp  labeled_double_edge_swap.cpp  labeled_edge_proposer.cpp  labeled_hinge_flip.cpp  single_edge.cpp  util.cpp
_graphinf/src/proposer/label/: mixed.cpp  uniform.cpp
_graphinf/src/proposer/sampler/: edge_sampler.cpp  label_sampler.cpp  vertex_sampler.cpp
_graphinf/src/random_graph/: dcsbm.cpp  hsbm.cpp  random_graph.cpp  util.cpp
_graphinf/src/random_graph/likelihood/: configuration.cpp  dcsbm.cpp  erdosrenyi.cpp  sbm.cpp
_graphinf/src/random_graph/prior/: block.cpp  degree.cpp  edge_count.cpp  label_graph.cpp  labeled_degree.cpp  nested_block.cpp  nested_label_graph.cpp
_graphinf/src/utility/: functions.cpp  integer_partition.cpp
_graphinf/tests/: CMakeLists.txt  fixtures.hpp
_graphinf/tests/test_data/: test_cowan.cpp  test_degree.cpp  test_dynamics.cpp  test_glauber.cpp  test_poisson_observ.cpp  test_sis.cpp
_graphinf/tests/test_generators/: test_graph_generators.cpp
_graphinf/tests/test_mcmc/: test_callbacks.cpp  test_community.cpp  test_mcmc.cpp  test_reconstruction.cpp
_graphinf/tests/test_priors/: test_block.cpp  test_blockcount.cpp  test_degree.cpp  test_edgecount.cpp  test_label_graph.cpp  test_labeled_degree.cpp  test_nested_blocks.cpp  test_nested_label_graph.cpp
_graphinf/tests/test_proposers/: _test_label_sampler.cpp  _test_labeled_double_edge_swap.cpp  _test_labeled_hinge_flip.cpp  test_double_edge_swap.cpp  test_edge_sampler.cpp  test_hinge_flip.cpp  test_mixed_blocks.cpp  test_multiplemoves.cpp  test_nested_mixed_blocks.cpp  test_nested_uniform_blocks.cpp  test_single_edge.cpp  test_uniform_blocks.cpp  test_vertex_sampler.cpp
_graphinf/tests/test_randomgraph/: test_configuration.cpp  test_dcsbm.cpp  test_erdosrenyi.cpp  test_hdcsbm.cpp  test_hsbm.cpp  test_sbm.cpp
_graphinf/tests/test_utility/: test_utility.cpp
graphinf_cpp/: CMakeLists.txt
graphinf_cpp/include/GraphInf/: generators.h  rv.hpp
graphinf_cpp/include/GraphInf/data/: data_model.h
graphinf_cpp/include/GraphInf/mcmc/: community.hpp  reconstruction.hpp
graphinf_cpp/pybind_wrapper/: init_rng.h  pybind_main.cpp
graphinf_cpp/pybind_wrapper/mcmc/: init_callbacks.h  init_mcmc.h
graphinf_cpp/pybind_wrapper/random_graph/: init_configuration.h
graphinf_cpp/pybind_wrapper/utility/: init_utility.h
graphinf_cpp/src/: generators.cpp
graphinf_cpp/src/data/: data_model.cpp
graphinf_cpp/src/random_graph/: hdcsbm.cpp  sbm.cpp
graphinf_cpp/src/utility/: distance.cpp  functions.cpp
graphinf_cpp/tests/: CMakeLists.txt  fixtures.hpp
graphinf_cpp/tests/test_data/: test_cowan.cpp  test_degree.cpp  test_sis.cpp
graphinf_cpp/tests/test_mcmc/: test_callbacks.cpp  test_community.cpp
graphinf_cpp/tests/test_priors/: test_block.cpp  test_blockcount.cpp  test_label_graph.cpp  test_labeled_degree.cpp
graphinf_cpp/tests/test_proposers/: test_double_edge_swap.cpp  test_hinge_flip.cpp  test_nested_uniform_blocks.cpp
graphinf_cpp/tests/test_randomgraph/: test_configuration.cpp  test_dcsbm.cpp  test_erdosrenyi.cpp  test_hdcsbm.cpp  test_hsbm.cpp  test_randomgraph.cpp  test_sbm.cpp
python/: CMakeLists.txt  data.h  init_rng.h  pybind_main.cpp
python/graph/: configuration.h  dcsbm.h  erdosrenyi.h  hdcsbm.h  hsbm.h  likelihood.h  randomgraph.h  sbm.h
python/graph/prior/: block.h  blockcount.h  degree.h  edgecount.h  labeled_degree.h  labelgraph.h  nestedblocks.h  nestedlabelgraph.h  prior.h
python/graph/proposer/: edge.h  label.h  movetypes.h  proposer.h  sampler.h
python/mcmc/: init.h
python/random_graph/proposer/: init_proposer.h
python/utility/: functions.h  init_functions.h  init_maps.h  init_utility.h  mcmc.h  utility.h
(+303 files in other folders)
